samples/_failures_safe/1761466735_f2838c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_be22372b.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_be22372b.c:188:12: error: missing terminating " character
  188 |     printf("Dijkstra shortest paths from %d:\
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_be22372b.c:188:5: error: expected expression at end of input
  188 |     printf("Dijkstra shortest paths from %d:\
      |     ^~~~~~
./samples/SAFE/__tmp_be22372b.c:188:5: error: expected declaration or statement at end of input
